# GenericFrameworkforKeyGuessingImprovements

./: CMakeLists.txt  dimension3experiments.cc  dimension4experiments.cc  dimension4sboxes.cc  dimension4timing.cc  dimension5experiments.cc  dimension5timing.cc  dimension6experiments.cc  dimension6timing.cc  dimension7timing.cc  trees_des.cc  trees_gift_f_delta.cc  trees_noekeon.cc  trees_noekeon_fixed_components.cc  trees_present.cc  trees_rectangle.cc  trees_rectangle_f_delta.cc  trees_rectangle_fixed_components.cc  trees_rectangle_multiple_outputs.cc  trees_serpent.cc
lib/: CMakeLists.txt  ComponentChoice.hpp  ComponentFunction.hpp  FourierTable.cc  FourierTable.hpp  SboxTools.cc  SboxTools.hpp  Uint64Subspace.hpp  VectorialBooleanFunction.cc  VectorialBooleanFunction.hpp  basic_linear_algebra.cc  basic_linear_algebra.hpp
lib/enumeration_algorithm/: BruteForce.cc  BruteForce.hpp  BruteForceOptimizations.cc  BruteForceOptimizations.hpp  ExhaustiveBF.cc  ExhaustiveBF.hpp  MinLeaves.cc  MinLeaves.hpp
